# OSLAB

./: .gitignore  AGENTS.md  README.ko.md  README.md  package.json  playwright.web-dashboard.config.cjs  pnpm-lock.yaml  pyproject.toml
apps/api/: .env.example  package.json  tsconfig.json
apps/web/: .env.example  next.config.mjs  package.json  tsconfig.json
config/: oslab.local.example.env  oslab.local.example.yaml  public-release-blocklist.example.txt  supplyscan.local.example.env
docs/: adoption-guide.ko.md  adoption-guide.md  architecture.md  concepts.ko.md  concepts.md  demos.ko.md  demos.md  fixtures.ko.md  fixtures.md  getting-started.ko.md  getting-started.md  github-release-checklist.md  index.ko.md  index.md  oslab-expert-review.md  oslab-implementation-checklist.md  oslab-platform-plan.md  proxmox-connection.ko.md  proxmox-connection.md  reports.ko.md  reports.md  scenarios.ko.md  scenarios.md  validation.ko.md  validation.md  web-dashboard-server.ko.md  web-dashboard-server.md  web-dashboard.ko.md  web-dashboard.md
docs/devs/: README.md  authoring-expansion-collaboration-plan.md  (+7 more)
scripts/: check-public-release.ps1
tests/: test_analysis.py  test_artifact_smoke.py  test_assertions.py  test_boot_smoke.py  test_cli.py  test_clone_smoke.py  test_commands.py  test_config.py  test_console.py  test_env_file.py  test_fixture_smoke.py  test_guest_preflight.py  test_guest_selector.py  test_plugins.py  test_proxmox.py  test_proxmox_checks.py  test_qemu_agent_guest.py  test_reports.py  test_scenario.py  test_suite.py  test_suite_runner.py  test_vmid.py
(+165 files in other folders)
